--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,21 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.commons-codec-1.10.jar=C:\\Users\\victo\\OneDrive\\Documentos\\NetBeansProjects\\bibliotecas_software\\apache_poi\\commons-codec-1.10.jar
+file.reference.commons-collections4-4.3.jar=C:\\Users\\victo\\OneDrive\\Documentos\\NetBeansProjects\\bibliotecas_software\\apache_poi\\commons-collections4-4.3.jar
+file.reference.commons-fileupload-1.4.jar=C:\\Users\\victo\\OneDrive\\Documentos\\NetBeansProjects\\bibliotecas_software\\apache_commons\\commons-fileupload-1.4.jar
+file.reference.commons-io-2.6.jar=C:\\Users\\victo\\OneDrive\\Documentos\\NetBeansProjects\\bibliotecas_software\\apache_commons\\commons-io-2.6.jar
+file.reference.curvesapi-1.04.jar=C:\\Users\\victo\\OneDrive\\Documentos\\NetBeansProjects\\bibliotecas_software\\apache_poi\\curvesapi-1.04.jar
+file.reference.dom4j-1.6.jar.zip=C:\\Users\\victo\\OneDrive\\Documentos\\NetBeansProjects\\bibliotecas_software\\apache_poi\\dom4j-1.6.jar.zip
+file.reference.gson-2.8.5.jar=C:\\Users\\victo\\OneDrive\\Documentos\\NetBeansProjects\\json\\gson-2.8.5.jar
+file.reference.json-20180130.jar=C:\\Users\\victo\\OneDrive\\Documentos\\NetBeansProjects\\bibliotecas_software\\json-20180130.jar
+file.reference.jstl.jar=C:\\Users\\victo\\OneDrive\\Documentos\\NetBeansProjects\\bibliotecas_software\\jstl\\jstl.jar
+file.reference.poi-3.17.jar=C:\\Users\\victo\\OneDrive\\Documentos\\NetBeansProjects\\bibliotecas_software\\apache_poi\\poi-3.17.jar
+file.reference.poi-ooxml-3.17.jar=C:\\Users\\victo\\OneDrive\\Documentos\\NetBeansProjects\\bibliotecas_software\\apache_poi\\poi-ooxml-3.17.jar
+file.reference.poi-ooxml-schemas-3.17.jar=C:\\Users\\victo\\OneDrive\\Documentos\\NetBeansProjects\\bibliotecas_software\\apache_poi\\poi-ooxml-schemas-3.17.jar
+file.reference.standard.jar=C:\\Users\\victo\\OneDrive\\Documentos\\NetBeansProjects\\bibliotecas_software\\jstl\\standard.jar
+file.reference.stax-api-1.0.1.jar=C:\\Users\\victo\\OneDrive\\Documentos\\NetBeansProjects\\bibliotecas_software\\apache_poi\\stax-api-1.0.1.jar
+file.reference.xmlbeans-2.6.0.jar=C:\\Users\\victo\\OneDrive\\Documentos\\NetBeansProjects\\bibliotecas_software\\apache_poi\\xmlbeans-2.6.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -37,7 +52,22 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${reference.EsentialReport.jar}
+    ${reference.EsentialReport.jar}:\
+    ${file.reference.commons-fileupload-1.4.jar}:\
+    ${file.reference.commons-io-2.6.jar}:\
+    ${file.reference.commons-codec-1.10.jar}:\
+    ${file.reference.commons-collections4-4.3.jar}:\
+    ${file.reference.curvesapi-1.04.jar}:\
+    ${file.reference.dom4j-1.6.jar.zip}:\
+    ${file.reference.poi-3.17.jar}:\
+    ${file.reference.poi-ooxml-3.17.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.17.jar}:\
+    ${file.reference.stax-api-1.0.1.jar}:\
+    ${file.reference.xmlbeans-2.6.0.jar}:\
+    ${file.reference.jstl.jar}:\
+    ${file.reference.standard.jar}:\
+    ${file.reference.gson-2.8.5.jar}:\
+    ${file.reference.json-20180130.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
