--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,8 @@ file.reference.commons-io-2.6.jar=C:\\Users\\victo\\OneDrive\\Documentos\\NetBea
 file.reference.curvesapi-1.04.jar=C:\\Users\\victo\\OneDrive\\Documentos\\NetBeansProjects\\bibliotecas_software\\apache_poi\\curvesapi-1.04.jar
 file.reference.dom4j-1.6.jar.zip=C:\\Users\\victo\\OneDrive\\Documentos\\NetBeansProjects\\bibliotecas_software\\apache_poi\\dom4j-1.6.jar.zip
 file.reference.gson-2.8.5.jar=C:\\Users\\victo\\OneDrive\\Documentos\\NetBeansProjects\\json\\gson-2.8.5.jar
+file.reference.jcommon-1.0.23.jar=C:\\Users\\victo\\Videos\\Curso_profundizacion\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar=C:\\Users\\victo\\Videos\\Curso_profundizacion\\bibliotecas_software\\jfreechart-1.0.19.jar
 file.reference.json-20180130.jar=C:\\Users\\victo\\OneDrive\\Documentos\\NetBeansProjects\\bibliotecas_software\\json-20180130.jar
 file.reference.jstl.jar=C:\\Users\\victo\\OneDrive\\Documentos\\NetBeansProjects\\bibliotecas_software\\jstl\\jstl.jar
 file.reference.poi-3.17.jar=C:\\Users\\victo\\OneDrive\\Documentos\\NetBeansProjects\\bibliotecas_software\\apache_poi\\poi-3.17.jar
@@ -66,7 +68,9 @@ javac.classpath=\
     ${file.reference.jstl.jar}:\
     ${file.reference.standard.jar}:\
     ${file.reference.gson-2.8.5.jar}:\
-    ${file.reference.json-20180130.jar}
+    ${file.reference.json-20180130.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
